--- a/style.css
+++ b/style.css
@@ -24,12 +24,37 @@ span {
   color: cornflowerblue;
 }
 
-#nome {
+input {
   padding: 50px;
   border-radius: 5px;
   font-size: 40px;
 }
 
 button {
-  padding: 65px;
+  padding: 60px;
+}
+
+h2 {
+  margin-bottom: 1rem;
+}
+h3 {
+  margin-bottom: 1rem;
+}
+button {
+  padding: 40px;
+  margin: 1rem;
+  border: none;
+  color: #F2F2F2;
+}
+
+button:hover {
+  opacity: 80%;
+}
+
+.start {
+  background-color: green;
+}
+
+.stop {
+  background-color: tomato;
 }
