--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
 }
 
 p {
-  font-size: 20px;
+  font-size: 1rem;
+  margin-top: 1rem;
 }
 
 h1 {
@@ -24,27 +25,12 @@ span {
   color: cornflowerblue;
 }
 
-input {
-  padding: 50px;
-  border-radius: 5px;
-  font-size: 40px;
-}
-
-button {
-  padding: 60px;
-}
 
 h2 {
   margin-bottom: 1rem;
 }
 h3 {
   margin-bottom: 1rem;
-}
-button {
-  padding: 40px;
-  margin: 1rem;
-  border: none;
-  color: #F2F2F2;
 }
 
 button:hover {
@@ -57,4 +43,37 @@ button:hover {
 
 .stop {
   background-color: tomato;
+}
+
+h2 {
+  text-align: center;
+}
+
+#area {
+  font-size: 2rem;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5rem;
+}
+
+button {
+  padding: 20px;
+  margin-left: 3px;
+  border-radius: 5px;
+  background-color: slateblue;
+  color: white;
+  border: none;
+}
+
+input {
+  padding: 20px;
+  outline: none;
+  border-radius: 8px;
+  border: none;
+  border: 1px solid #CCC;
 }
